Closed Bug 383872 Opened 18 years ago Closed 18 years ago

"ASSERTION: invalid image height" with <svg:foreignObject>, background image, height: 0.5px

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: longsonr)

References

Details

(Keywords: assertion, testcase)

Attachments

(2 files, 1 obsolete file)

Attached image testcase
###!!! ASSERTION: invalid image height: 'aHeight > 0', file /Users/jruderman/trunk/mozilla/gfx/src/thebes/nsThebesImage.h, line 114
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Attachment #267978 - Flags: review?(vladimir)
While this sorts out the testcase, it does not fix images with dimensions > 0 and < 0.5. Whats should happen in such a case a) don't draw them. I.e fix the callers of nsThebesImage::Draw to skip drawing in this case. The IsEmpty test that they do would need adjusting. b) draw them. In which case the right thing would be to add +1 to the test rather than +0.5
I'd say let's just add +1 to the test... we're already talking about "big" images, limiting the size by 1px won't hurt.
Attachment #267978 - Attachment is obsolete: true
Attachment #267978 - Flags: review?(vladimir)
Attachment #268127 - Flags: review?(vladimir)
Attachment #268127 - Flags: superreview?(roc)
Attachment #268127 - Flags: superreview?(roc) → superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Depends on: 368573
Flags: in-testsuite?
Crashtest checked in.
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: