Bug 383872 - invalid image height assertion with svg foreignObject element, background image, height: 0.5px. r=vladimir,sr=roc